added temp file create/delete methods